# haskell-chan

./: .gitignore  README.md  haskell-chan.cabal
app/: Main.hs  devel.hs
config/: keter.yml  settings.yml  test-settings.yml
src/: ChanLib.hs  ChanWeb.hs
templates/: homeTemplate.hamlet
