name:                haskell-chan
version:             0.1.0.0
synopsis:            Chan parser
description:         Please see README.md
homepage:            https://github.com/spocot/haskell-chan#readme
license:             BSD3
license-file:        LICENSE
author:              spocot
maintainer:          spencerkocot@gmail.com
copyright:           2017 spocot
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     ChanLib
                     , ChanWeb
  build-depends:       base >= 4.7 && < 5
                     , HTTP
                     , network-uri
                     , aeson
                     , bytestring
                     , yesod
  default-language:    Haskell2010

executable haskell-chan-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , haskell-chan
  default-language:    Haskell2010

test-suite haskell-chan-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , haskell-chan
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/spocot/haskell-chan
